// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`issue-17239.ts - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
model = types
  .model({ something: mxSomething })
  .volatile<[foo]>((self) => ({ loading: false, savingStatus: "idle", undoDisabled: false, aiFocused: false, online: true }));

=====================================output=====================================
model = types
  .model({ something: mxSomething })
  .volatile<[foo]>((self) => ({
    loading: false,
    savingStatus: "idle",
    undoDisabled: false,
    aiFocused: false,
    online: true,
  }));

================================================================================
`;

exports[`issue-17239.ts format 1`] = `
====================================options=====================================
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
model = types
  .model({ something: mxSomething })
  .volatile<[foo]>((self) => ({ loading: false, savingStatus: "idle", undoDisabled: false, aiFocused: false, online: true }));

=====================================output=====================================
model = types
  .model({ something: mxSomething })
  .volatile<[foo]>((self) => ({
    loading: false,
    savingStatus: "idle",
    undoDisabled: false,
    aiFocused: false,
    online: true,
  }));

================================================================================
`;

exports[`issue-19052.ts - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export class OpinionsRepositoryService {
  groupBy<Fields extends OpinionField[], TGroupBy extends OpinionField>(
    params: FindAllOpinionsParams,
    groupByField: TGroupBy,
    includeFields = ["_id"] as Fields,
  ) {
    return this.opinionModel
      .aggregate<GroupedOpinions<Fields, TGroupBy>>([
        {
          $match: this.mongodbUtilities.clean(params),
        },
        {
          $group: {
            _id: \`$\${groupByField}\`,
            opinions: {
              $push: includeFields.reduce(
                (acc, field) => ({ ...acc, [field]: \`$\${field}\` }),
                {},
              ),
            },
          },
        },
        { $set: { [groupByField]: "$_id" } },
        { $unset: "_id" },
      ])
      .exec();
  }
}

=====================================output=====================================
export class OpinionsRepositoryService {
  groupBy<Fields extends OpinionField[], TGroupBy extends OpinionField>(
    params: FindAllOpinionsParams,
    groupByField: TGroupBy,
    includeFields = ["_id"] as Fields,
  ) {
    return this.opinionModel
      .aggregate<GroupedOpinions<Fields, TGroupBy>>([
        { $match: this.mongodbUtilities.clean(params) },
        {
          $group: {
            _id: \`$\${groupByField}\`,
            opinions: {
              $push: includeFields.reduce(
                (acc, field) => ({ ...acc, [field]: \`$\${field}\` }),
                {},
              ),
            },
          },
        },
        { $set: { [groupByField]: "$_id" } },
        { $unset: "_id" },
      ])
      .exec();
  }
}

================================================================================
`;

exports[`issue-19052.ts format 1`] = `
====================================options=====================================
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export class OpinionsRepositoryService {
  groupBy<Fields extends OpinionField[], TGroupBy extends OpinionField>(
    params: FindAllOpinionsParams,
    groupByField: TGroupBy,
    includeFields = ["_id"] as Fields,
  ) {
    return this.opinionModel
      .aggregate<GroupedOpinions<Fields, TGroupBy>>([
        {
          $match: this.mongodbUtilities.clean(params),
        },
        {
          $group: {
            _id: \`$\${groupByField}\`,
            opinions: {
              $push: includeFields.reduce(
                (acc, field) => ({ ...acc, [field]: \`$\${field}\` }),
                {},
              ),
            },
          },
        },
        { $set: { [groupByField]: "$_id" } },
        { $unset: "_id" },
      ])
      .exec();
  }
}

=====================================output=====================================
export class OpinionsRepositoryService {
  groupBy<Fields extends OpinionField[], TGroupBy extends OpinionField>(
    params: FindAllOpinionsParams,
    groupByField: TGroupBy,
    includeFields = ["_id"] as Fields,
  ) {
    return this.opinionModel
      .aggregate<GroupedOpinions<Fields, TGroupBy>>([
        {
          $match: this.mongodbUtilities.clean(params),
        },
        {
          $group: {
            _id: \`$\${groupByField}\`,
            opinions: {
              $push: includeFields.reduce(
                (acc, field) => ({ ...acc, [field]: \`$\${field}\` }),
                {},
              ),
            },
          },
        },
        { $set: { [groupByField]: "$_id" } },
        { $unset: "_id" },
      ])
      .exec();
  }
}

================================================================================
`;
